--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-    "name": "tech-blog",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-        "test": "jest",
-        "start": "node server.js"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/andytheelf/tech-blog.git"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/andytheelf/tech-blog/issues"
-    },
-    "homepage": "https://github.com/andytheelf/tech-blog#readme",
-    "dependencies": {
-        "bcrypt": "^5.0.0",
-        "connect-session-sequelize": "^6.1.1",
-        "dotenv": "^8.2.0",
-        "express": "^4.17.1",
-        "express-handlebars": "^4.0.4",
-        "express-session": "^1.17.1",
-        "mysql2": "^2.1.0",
-        "sequelize": "^5.21.12"
-    },
-    "devDependencies": {
-        "jest": "^26.0.1",
-        "just": "^0.1.8"
-    }
+  "name": "tech-blog",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "scripts": {
+    "test": "jest",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andytheelf/tech-blog.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/andytheelf/tech-blog/issues"
+  },
+  "homepage": "https://github.com/andytheelf/tech-blog#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "connect-session-sequelize": "^6.1.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^4.0.4",
+    "express-session": "^1.17.1",
+    "handlebars": "^4.7.6",
+    "mysql2": "^2.1.0",
+    "nodemon": "^2.0.4",
+    "sequelize": "^5.21.13"
+  },
+  "devDependencies": {
+    "jest": "^26.0.1",
+    "just": "^0.1.8"
+  }
 }
